--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <ul>    
             </nav>
         </header>
+
     <main>
         <ul>
              <li><img class="carouselpicture" src="cat_petsite.jpeg"></li>
@@ -23,10 +24,12 @@
              <li><img class="carouselpicture" src="Tortoise_petsite.jpeg"></li>
         </ul>
 
-    <p> <div id="aboutUs"> About Us 
+    <h2>
+        About Us
+    </h2>
+    <p>
         Vaporware XOXO heirloom farm-to-table neutra. Venmo franzen neutra, air plant you probably haven't heard of them whatever austin bushwick enamel pin gochujang paleo pok pok. Tbh lumbersexual pok pok adaptogen af schlitz shabby chic cronut lo-fi chartreuse mumblecore farm-to-table. Cronut irony keytar, distillery try-hard asymmetrical pabst migas crucifix flannel flexitarian cardigan godard biodiesel narwhal. Paleo chambray tbh blue bottle farm-to-table fixie bushwick organic chia distillery sriracha vexillologist. Cardigan scenester everyday carry, fanny pack taiyaki lyft jean shorts cloud bread sriracha kitsch tbh gluten-free ethical jianbing. Celiac shoreditch coloring book tattooed, fashion axe food truck keytar health goth yuccie VHS meditation vaporware authentic iPhone.
 
-        Gluten-free cliche selvage, truffaut hell of hammock cronut williamsburg. Marfa seitan dreamcatcher cornhole live-edge. Bicycle rights meggings salvia, PBR&B hammock selvage slow-carb hell of venmo photo booth dreamcatcher tote bag pour-over ennui palo santo. Fixie bitters blog, PBR&B tumblr tattooed street art bushwick quinoa hammock. Neutra master cleanse kitsch man braid quinoa synth keffiyeh. Forage retro banh mi neutra. Meh normcore photo booth cronut intelligentsia.
     </p>
 
 
