adding Pet of the month html and css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h1>Best Pet Blog</h1>
             <nav>
                 <ul>
-                    <li> <a href="https://carloslopez0250.github.io/Petsite/petofthemonth.html"</a>Pet of the Month</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/index.html"</a>Submit a Pet Page</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html"</a>Contact Us</li>
+                    <li> <a href="https://carloslopez0250.github.io/Petsite/petofthemonth.html">Pet of the Month</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</li>
                 <ul>    
             </nav>
         </header>
