--- a/petofthemonth.html
+++ b/petofthemonth.html
@@ -12,10 +12,9 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://carloslopez0250.github.io/Petsite/index.html">
-                    </li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</li>
+                        <a href="https://carloslopez0250.github.io/Petsite/index.html"></a>Home</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/index.html"></a>Submit a Pet Page</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html"></a>Contact Us</li>
                 </ul>
             </nav>
         </header>
