added pet of the month modified html and css

--- a/petofthemonth.html
+++ b/petofthemonth.html
@@ -12,13 +12,27 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://carloslopez0250.github.io/Petsite/index.html"></a>Home</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/index.html"></a>Submit a Pet Page</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html"></a>Contact Us</li>
+                        <a href="https://carloslopez0250.github.io/Petsite/index.html">Home</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</li>
                 </ul>
             </nav>
         </header>
+        <main>
+            <h2>
+                This Months Pet is Frank the Tortoise!!!
+            </h2>
+            
+            <ul>
+                <li>
+                    <img class="image" src="petofthemonth.jpeg">
+                </li>
+            </ul>
+            <p>
 
+            </p>
+
+        </main>
 
     </body>
 </html>
