--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
              <li><img class="carouselpicture" src="pug_petsite.jpeg"></li>
              <li><img class="carouselpicture" src="snake_petsite.jpeg"></li>
              <li><img class="carouselpicture" src="Tortoise_petsite.jpeg"></li>
+             <!-- <li><img class="carouselpicture" src="rabbit_petsite.jpeg"></li> -->
         </ul>
 
     <h2>
