--- a/petofthemonth.html
+++ b/petofthemonth.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
             <p>
-                Gluten-free church-key pop-up fashion axe photo booth sustainable humblebrag freegan. Tote bag yuccie pop-up man braid, offal craft beer vape pickled tacos fanny pack affogato whatever lomo sartorial organic. Meggings typewriter literally adaptogen you probably haven't heard of them enamel pin truffaut man braid authentic thundercats vape seitan polaroid. PBR&B chambray yuccie scenester messenger bag. Crucifix church-key ugh blog asymmetrical truffaut chicharrones raw denim bicycle rights brooklyn next level meggings literally hexagon tumblr.
+                <!-- Gluten-free church-key pop-up fashion axe photo booth sustainable humblebrag freegan. Tote bag yuccie pop-up man braid, offal craft beer vape pickled tacos fanny pack affogato whatever lomo sartorial organic. Meggings typewriter literally adaptogen you probably haven't heard of them enamel pin truffaut man braid authentic thundercats vape seitan polaroid. PBR&B chambray yuccie scenester messenger bag. Crucifix church-key ugh blog asymmetrical truffaut chicharrones raw denim bicycle rights brooklyn next level meggings literally hexagon tumblr. -->
             </p>
 
         </main>
