css class change

--- a/petofthemonth.html
+++ b/petofthemonth.html
@@ -4,7 +4,7 @@
         <title>
             Pet of the Month
         </title>
-        <link href="style.css" rel="stylesheet">
+        <link href="petofthemonth.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -12,27 +12,24 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://carloslopez0250.github.io/Petsite/index.html">Home</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</li>
+                        <a href="https://carloslopez0250.github.io/Petsite/index.html">Home</a></li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</a></li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
-        <main>
-            <h2>
-                This Months Pet is Frank the Tortoise!!!
-            </h2>
+    <main>  
+        <ul>  
+            <li><img class="Bunny" src="rabbit_petsite.jpeg"></li>
+        </ul>
+        <h2>
+            This Months Pet is Thumper!!!
+        </h2>
+        <p>
+            Gluten-free church-key pop-up fashion axe photo booth sustainable humblebrag freegan. Tote bag yuccie pop-up man braid, offal craft beer vape pickled tacos fanny pack affogato whatever lomo sartorial organic. Meggings typewriter literally adaptogen you probably haven't heard of them enamel pin truffaut man braid authentic thundercats vape seitan polaroid. PBR&B chambray yuccie scenester messenger bag. Crucifix church-key ugh blog asymmetrical truffaut chicharrones raw denim bicycle rights brooklyn next level meggings literally hexagon tumblr.
+        </p>
 
-            <ul>
-                <li>
-                    <img class="image" src="petofthemonth.jpeg">
-                </li>
-            </ul>
-            <p>
-                <!-- Gluten-free church-key pop-up fashion axe photo booth sustainable humblebrag freegan. Tote bag yuccie pop-up man braid, offal craft beer vape pickled tacos fanny pack affogato whatever lomo sartorial organic. Meggings typewriter literally adaptogen you probably haven't heard of them enamel pin truffaut man braid authentic thundercats vape seitan polaroid. PBR&B chambray yuccie scenester messenger bag. Crucifix church-key ugh blog asymmetrical truffaut chicharrones raw denim bicycle rights brooklyn next level meggings literally hexagon tumblr. -->
-            </p>
-
-        </main>
+    </main>
 
     </body>
 </html>
