--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h1>Best Pet Blog</h1>
             <nav>
                 <ul>
-                    <li> <a href="https://carloslopez0250.github.io/Petsite/petofthemonth.html">Pet of the Month</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</li>
-                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</li>
+                    <li> <a href="https://carloslopez0250.github.io/Petsite/petofthemonth.html">Pet of the Month</a></li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/index.html">Submit a Pet Page</a></li>
+                    <li> <a href="https://aoifewm.github.io/petphotos/contactus.html">Contact Us</a></li>
                 <ul>    
             </nav>
         </header>
