petsite.js added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Best Pet Blog</title>
         <link href="style.css" rel="stylesheet">
+        <script src="petsite.js"></script>
     </head>
     <body>
         <header>
