--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Best Pet Blog</title>
         <link href="style.css" rel="stylesheet">
-        <script src="petsite.js"></script>
+    
     </head>
     <body>
         <header>
@@ -18,6 +18,8 @@
         </header>
 
     <main>
+        <!-- <script>document.write('<h3>Welcome!</h3>');</script> -->
+        <h3 id="greeting"></h3>
         <ul>
              <li><img class="carouselpicture" src="cat_petsite.jpeg"></li>
              <li><img class="carouselpicture" src="pug_petsite.jpeg"></li>
@@ -41,6 +43,6 @@
         <p>&copy; Best Pet Blog</p> 
     </footer>
 
-
+    <script src="petsite.js"></script>
     </body>
 </html>        
